@@ -69,6 +69,9 @@ Version 1.4.5 - CVS
   - Included local configuration file in config.php generated by
     administrator's plugin.
   - Fixed checking for quota when appending to Sent folder (#1172694).
+  - Fixed folder renaming to handle collapse_folder information, be
+    compatible with Cyrus-IMAPD >= 2.0 and correctly handle unsubscribed
+    folders. Thanks Simon Matter for the patch. (#1155791)
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
